# libvcmmd

./: Makefile.am  autogen.sh  configure.ac  targets.list
include/: vcmmd.h
src/: Makefile.am  vcmmd.c
